--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
 
     <footer class="bg-gray-800 text-white mt-12 py-6">
         <div class="container mx-auto px-4 text-center">
-            <p class="text-sm">&copy; 2024. Báo cáo này được tạo tự động dựa trên dữ liệu giả định cho mục đích minh họa.</p>
-            <p class="text-xs text-gray-400 mt-1">Thông tin không đại diện cho số liệu chính thức.</p>
+            <p class="text-sm">&copy; 2025. Báo cáo này được tạo tự động dựa trên dữ liệu giả định cho mục đích minh họa.</p>
+            <p class="text-xs text-gray-400 mt-1">Thông tin không đại diện cho số liệu chính thức.Bản quyền thuộc Đàm Văn Minh</p>
         </div>
     </footer>
 
@@ -468,3 +468,4 @@
     </script>
 </body>
 </html>
+
